# ocean-cleanup-project

./: README.md  pyproject.toml
notebooks/: kili_api_hello_world.ipynb  proto_image_classifier.ipynb
ocean_cleanup_project/: utils.py
